Inflation Group Project Files

--- a/FRED FFR CPI 24 Month Scatter.ipynb
+++ b/FRED FFR CPI 24 Month Scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,9 +29,9 @@
      "text": [
       "Requirement already satisfied: fredapi in c:\\users\\priya\\anaconda3\\lib\\site-packages (0.5.0)\n",
       "Requirement already satisfied: pandas in c:\\users\\priya\\anaconda3\\lib\\site-packages (from fredapi) (1.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2022.1)\n",
       "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (1.21.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->fredapi) (1.16.0)\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "24 2023-02-01   5.98644"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "24 2023-02-01   5.98644     24"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "24 2023-02-01      4.57"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "24 2023-02-01      4.57     24"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,15 +983,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The r-squared is: 0.47138826484675356\n",
-      "The r-squared is: 0.47138826484675356\n"
+      "The FF_df r-squared is: 0.748458754326254\n",
+      "The CPIRATE_DF r-squared is: 0.47138826484675356\n"
      ]
     },
     {
@@ -1010,19 +1010,19 @@
     "regress_values_FF = FF_df['index'] * slope + intercept\n",
     "line_eq_FF = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "\n",
-    "(slope, intercept, rvalue, pvalue, stderr) = linregress(CPIRATE_df['index'], CPIRATE_df['CPIAUCSL'])\n",
-    "regress_values_CPI = CPIRATE_df['index'] * slope + intercept\n",
-    "line_eq_CPI = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "(slope2, intercept2, rvalue2, pvalue2, stderr2) = linregress(CPIRATE_df['index'], CPIRATE_df['CPIAUCSL'])\n",
+    "regress_values_CPI = CPIRATE_df['index'] * slope2 + intercept2\n",
+    "line_eq_CPI = \"y = \" + str(round(slope2,2)) + \"x + \" + str(round(intercept2,2))\n",
     "\n",
     "plt.figure(figsize = (10,5))\n",
     "plt.scatter(FF_df['index'], FF_df['FEDFUNDS'], label=\"Fed Funds Rate\")\n",
     "plt.scatter(CPIRATE_df['index'], CPIRATE_df['CPIAUCSL'], label=\"CPI Rate\")\n",
     "\n",
     "plt.plot(FF_df['index'],regress_values_FF,\"r-\")\n",
-    "print(f\"The r-squared is: {rvalue**2}\")\n",
+    "print(f\"The FF_df r-squared is: {rvalue**2}\")\n",
     "\n",
     "plt.plot(CPIRATE_df['index'],regress_values_CPI,\"r-\")\n",
-    "print(f\"The r-squared is: {rvalue**2}\")\n",
+    "print(f\"The CPIRATE_DF r-squared is: {rvalue2**2}\")\n",
     "\n",
     "plt.title(\"Fed Funds Rate vs. CPI, 2021 to 2023\")\n",
     "plt.xlabel(\"Months\")\n",
