Inflation Group Project Files

--- a/FRED FFR CPI 24 Month Scatter.ipynb
+++ b/FRED FFR CPI 24 Month Scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "from scipy import stats\n",
     "\n",
     "from scipy.stats import linregress\n",
-    "from sklearn import datasets\n"
+    "from sklearn import datasets\n",
+    "from scipy.stats import pearsonr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +31,8 @@
       "Requirement already satisfied: fredapi in c:\\users\\priya\\anaconda3\\lib\\site-packages (0.5.0)\n",
       "Requirement already satisfied: pandas in c:\\users\\priya\\anaconda3\\lib\\site-packages (from fredapi) (1.4.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2022.1)\n",
       "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (1.21.5)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from pandas->fredapi) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\priya\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->fredapi) (1.16.0)\n"
      ]
     }
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +306,7 @@
        "24 2023-02-01   5.98644"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +538,7 @@
        "24 2023-02-01   5.98644     24"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +739,7 @@
        "24 2023-02-01      4.57"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +970,7 @@
        "24 2023-02-01      4.57     24"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1003,9 +1004,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson correlation coefficient: 0.255\n"
+     ]
     }
    ],
    "source": [
+    "# Create scatter plot, regression lines, r square values and pearson coefficient \n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(FF_df['index'], FF_df['FEDFUNDS'])\n",
     "regress_values_FF = FF_df['index'] * slope + intercept\n",
     "line_eq_FF = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
@@ -1028,7 +1037,11 @@
     "plt.xlabel(\"Months\")\n",
     "plt.ylabel(\"Percentage\")\n",
     "plt.legend(loc='best')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# calculate Pearson correlation coefficient\n",
+    "corr, _ = pearsonr(FF_df['FEDFUNDS'], CPIRATE_df['CPIAUCSL'])\n",
+    "print(f'Pearson correlation coefficient: {corr:.3f}')\n"
    ]
   },
   {
